# eos-utils

./: README.md  copy_eos.py  pyproject.toml
src/eos_utils/: __init__.py  copy_eos.py  get_redirector.py  get_voms.py  glob_eos.py  load_file_eos.py  save_file_eos.py
src/eos_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
