[project]
name = "eos-utils"
version = "1.0.0"
authors = [
  { name="Thomas Sievert", email="63161166+tcoulvert@users.noreply.github.com" },
]
description = "A small package to hold useful EOS tools."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/tcoulvert/eos-utils"